RESOLVED FIXED61498
Safari Web Content crashes while entering/exiting the full screen mode of the video content
https://bugs.webkit.org/show_bug.cgi?id=61498
Summary Safari Web Content crashes while entering/exiting the full screen mode of the...
Jer Noble
Reported 2011-05-25 19:45:08 PDT
Safari Web Content crashes while entering/exiting the full screen mode of the video content
Attachments
Patch (5.96 KB, patch)
2011-05-25 19:51 PDT, Jer Noble
mjs: review+
Jer Noble
Comment 1 2011-05-25 19:51:09 PDT
Maciej Stachowiak
Comment 2 2011-05-26 10:34:05 PDT
Comment on attachment 94907 [details] Patch r=me
Jer Noble
Comment 3 2011-05-26 12:30:56 PDT
Note You need to log in before you can comment on or make changes to this bug.