third_party/WebKit/Source/WebCore/dom/Document.h
@@ -1072,6 +1072,7 @@ public:
     
     void setFullScreenRenderer(RenderFullScreen*);
     RenderFullScreen* fullScreenRenderer() const { return m_fullScreenRenderer; }
+    void fullScreenRendererDestroyed();
     
     void setFullScreenRendererSize(const IntSize&);
     void setFullScreenRendererBackgroundColor(Color);
