third_party/WebKit/Source/WebCore/rendering/RenderFullScreen.cpp
@@ -37,6 +37,16 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 using namespace WebCore;
 
+void RenderFullScreen::destroy()
+{
+    // RenderObjects are unretained, so notify the document (which holds a pointer to a RenderFullScreen)
+    // if it's RenderFullScreen is destroyed.
+    if (document() && document()->fullScreenRenderer() == this)
+        document()->fullScreenRendererDestroyed();
+
+    RenderFlexibleBox::destroy();
+}
+
 PassRefPtr<RenderStyle> RenderFullScreen::createFullScreenStyle()
 {
     RefPtr<RenderStyle> fullscreenStyle = RenderStyle::createDefaultStyle();
