third_party/WebKit/Source/WebCore/rendering/RenderFullScreen.h
@@ -35,6 +35,7 @@ namespace WebCore {
 class RenderFullScreen : public RenderFlexibleBox {
 public:
     RenderFullScreen(Node* node) : RenderFlexibleBox(node) { setReplaced(false); }
+    virtual void destroy();
     virtual bool isRenderFullScreen() const { return true; }
     virtual const char* renderName() const { return "RenderFullScreen"; }
     
